# tsd

./: .gitignore  CLAUDE.md  LICENSE  README.md  great_train_data_35k.csv  great_train_data_5k.csv  pyproject.toml  requirements.txt  run_reproducibility_check.py  run_robustness_check.py  run_validation.py
.agent/: .nav-config.json  DEVELOPMENT-README.md
.agent/system/: .gitkeep  architecture.md
.agent/tasks/: .gitkeep  TASK-001-analysis-complete.md  TASK-002-great-fix.md  TASK-003-paper-complete.md
.claude/: settings.json
.github/workflows/: test.yml
R/: synthpop_generate.R
docs/: VALIDATION_CHECKLIST.md  great_colab_workflow.md  implementation_plan.md  methodological_validation.md  paper_draft.md  paper_latex.aux  paper_latex.out  paper_latex.tex  paper_latex.toc  paper_latex_complete.aux  paper_latex_complete.out  paper_latex_complete.tex  paper_latex_complete.toc  pre_registration.md  research_review_responses.md  study_design_spec.md
docs/literature_notes/: wheaton_2009_synthesized_population_databases.md
notebooks/: great_colab_t4.ipynb
results/experiments/: all_results.csv  all_results_complete.csv  checkpoint.json  full_experiment_log.txt  great_results.csv  method_summary.csv  mlp_tstr_robustness.csv  reproducibility_check.json  statistical_analysis_report.txt  summary.csv  voi_analysis_results.txt
results/pilot/: ctgan_5k.csv  dpbn_5k.csv  great_synthetic_data.csv  integration_test_results.csv  pilot_results.csv  synthetic_ctgan.csv  synthetic_independent_marginals.csv  test_data.csv  train_data.csv
results/validation_pilot/: FINDINGS.md  decision_summary.json  synthetic_ctgan.csv  synthetic_independent_marginals.csv  test_data.csv  validation_results.csv
scripts/: download_data.sh
src/: __init__.py  pilot_test.py  run_experiments.py  test_dpbn.py  validation_pilot.py
src/analysis/: __init__.py  mada_framework.py  statistical_analysis.py  visualizations.py  voi_analysis.py
src/generators/: __init__.py  ctgan_generator.py  dp_bayesian_network.py  great_colab_notebook.ipynb  great_colab_notebook_fixed.ipynb  great_generator.py  independent_marginals.py  synthpop_wrapper.py  test_GReaT.ipynb
tests/: conftest.py  test_cli.py  test_config.py  test_figures.py  test_generators.py  test_mada.py  test_measures.py  test_preprocessing.py  test_statistical_analysis.py  test_verify.py  test_voi.py
tsd/: __init__.py  cli.py  config.py  constants.py  run_experiments.py
(+59 files in other folders)
