[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trustingsyntheticdata"
version = "0.1.0"
description = "Multiattribute Decision Analysis Framework for Synthetic Data Generation Method Selection"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Michael Koo"},
    {name = "Alfonso Berumen"}
]
requires-python = ">=3.10"
keywords = ["synthetic data", "decision analysis", "privacy", "machine learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "sdv>=1.3.0",
    "DataSynthesizer==0.1.13",
    "PyYAML>=6.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
]
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
great = [
    "be-great>=0.0.3",
]

[project.scripts]
tsd = "tsd.cli:main"

[project.urls]
Homepage = "https://github.com/MichaelKoo21/TrustingSyntheticData"
Repository = "https://github.com/MichaelKoo21/TrustingSyntheticData"

[tool.setuptools.packages.find]
where = ["."]
include = ["tsd*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
    "B007",  # unused loop control variable
    "B905",  # zip() without strict=
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
